--- a/src/Api/Edison.Trading.Api.csproj
+++ b/src/Api/Edison.Trading.Api.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -12,7 +12,6 @@
 
   <!-- Inclui os arquivos fonte necessários explicitamente -->
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="ProfitDLL.Types.cs" />
     <Compile Include="ProfitDLL.Imports.cs" />
   </ItemGroup>
