cache ONNX input name for efficiency

--- a/src/Core/Edison.Trading.Core.csproj
+++ b/src/Core/Edison.Trading.Core.csproj
@@ -9,5 +9,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.31.1" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.17.3" />
   </ItemGroup>
 </Project>
