correção de lastClose

--- a/tests/Edison.Trading.Tests.csproj
+++ b/tests/Edison.Trading.Tests.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <AssemblyName>Edison.Trading.ProfitDLLClient.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
